--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <table id="tab"></table>
     <script type="module" src="./src/main.js"></script>
     <script type="text/javascript" src="./public/static/SuperMap3D/SuperMap3D.js"></script>
   </body>
