--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/SuperMap3D/Widgets/widgets.css">
+    <link rel>
     <title>Vite App</title>
   </head>
   <body>
@@ -12,5 +13,6 @@
     <table id="tab"></table>
     <script type="module" src="./src/main.js"></script>
     <script type="text/javascript" src="./public/static/SuperMap3D/SuperMap3D.js"></script>
+    <script src = "../components/ViewshedAnalysis.vue"></script>
   </body>
 </html>
